tests/neg-custom-args/extmethods-tparams.scala
extension (self: T) def foo[T] = ??? // error
extension [T1](self: T1) def bar[T2] = ??? // error